<resources>
    <string name="app_name" translatable="false">Taxo Driver</string>
    <string name="login_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="text_button_login">Login</string>
    <string name="all_orders_text">Available orders</string>
    <string name="my_orders_text">My orders</string>
    <string name="text_orders_list_drawer">List of orders</string>
    <string name="text_info_about_user">About user</string>
    <string name="text_about_program">About</string>
    <string name="login_email_password_empty">Enter email and password</string>
    <string name="login_failed_text">Login failed</string>
    <string name="logout_text">Log out</string>
    <string name="text_driver_info">Driver information</string>
    <string name="text_label_car_information">Car information:</string>
    <string name="about_text_label">About program</string>
    <string name="text_description_program">The program for taxi drivers. Designed to receive orders from customers.</string>
    <string name="listitem_labels_count_stop">"Number of intermediate stops: "</string>
    <string name="listitem_labels_from">"From: "</string>
    <string name="listitem_labels_price">"Price: "</string>
    <string name="listitem_labels_to">"To: "</string>
    <string name="maps_api_key" translatable="false">AIzaSyBAAYhzmC0BPCO4PQC0sMZu2EeGdkvGYrA</string>
    <string name="label_from_points">List endpoints:</string>
    <string name="button_text_accept">Accept</string>
    <string name="button_text_navigation">navigation</string>
    <string name="wait_loading_text">Please wait...</string>
    <string name="order_text">Order</string>
    <string name="currency_uah">UAH</string>
    <string name="additional_comment_text_label">"Additional comment: "</string>
    <string name="markers_start_label">Start</string>
    <string name="get_routes_error">Get routes error</string>
    <string name="progress_sorting">Orders sorting...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="accept_dialog_title">Confirmation</string>
    <string name="accept_dialog_question">Are you sure you want to confirm this order?</string>
    <string name="accept_dialog_positive_button_text">Yes</string>
    <string name="accept_dialog_negative_button_text">No</string>
    <string name="button_text_arrived">Arrived</string>
    <string name="label_orders_are_downloaded">Orders are downloaded...</string>
    <string name="button_text_completed">Completed</string>
    <string name="dialog_order_completed_title">Order completed</string>
    <string name="dialog_order_completed_message">Do not forget to pay the customer</string>
    <string name="ok_button">OK</string>
    <string name="toast_arrive_start_place">Expect client</string>
    <string name="notification_title">The decision orders</string>
    <string name="notification_text">Your location is sent to the client</string>
    <string name="status_free_text">Free</string>
    <string name="status_accepted_text">Accepted</string>
    <string name="status_completed_text">Completed</string>
    <string name="login_dialog_message">Authorisation...</string>
    <string name="network_down_snackbar_text">No Internet connection</string>
    <string name="action_open_wifi">Wi-Fi settings</string>
    <string name="toast_order_inaccessible">The order was canceled by the customer or taken another driver</string>

</resources>
