<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_text"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/listitem_from_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/listitem_labels_from" />

        <TextView
            android:id="@+id/listitem_from_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/listitem_from_text_label"
            tools:text="Черкаси, бул. Шевченка, 350" />

        <TextView
            android:id="@+id/listitem_to_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listitem_from_text_label"
            android:layout_marginTop="8dp"
            android:text="@string/listitem_labels_to" />

        <TextView
            android:id="@+id/listitem_to_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listitem_from_text_label"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/listitem_to_text_label"
            tools:text="Черкаси, вул. Сумгаїтська, 125" />

        <TextView
            android:id="@+id/listitem_count_of_stop_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listitem_to_text_label"
            android:layout_marginTop="8dp"
            android:text="@string/listitem_labels_count_stop" />

        <TextView
            android:id="@+id/listitem_stopcount_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listitem_to_text_label"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/listitem_count_of_stop_text_label"
            tools:text="3" />

        <TextView
            android:id="@+id/listitem_price_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listitem_count_of_stop_text_label"
            android:layout_marginTop="8dp"
            android:text="@string/listitem_labels_price" />

        <TextView
            android:id="@+id/listitem_price_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listitem_count_of_stop_text_label"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/listitem_price_text_label"
            tools:text="300 грн." />

    </RelativeLayout>


</LinearLayout>